--- a/style.css
+++ b/style.css
@@ -231,3 +231,39 @@ nav button{
 #middle-content{
     background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
 }
+
+/* footer section styles */
+
+.footer{
+    width: 100%;
+    height: 100px;
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.03);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-content{
+    width: 1140px;
+    height: 36px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.footer-content h4{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 23px;    
+    margin: 0;
+}
+
+.icon-container{
+    display: flex;
+    gap: 24px;
+    align-items: center;
+}
