--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ nav button{
 /* footer section styles */
 
 .footer{
-    width: 100%;
+    width: 1440px;
     height: 100px;
     border-radius: 16px;
     background: rgba(13, 19, 33, 0.03);
