--- a/style.css
+++ b/style.css
@@ -226,6 +226,7 @@ nav button{
     margin: 0;
     width: 171px;
     height: 47px; 
+    cursor: pointer;
 }
 
 #middle-content{
@@ -235,13 +236,14 @@ nav button{
 /* footer section styles */
 
 .footer{
-    width: 1440px;
+    width: 100%;
     height: 100px;
     border-radius: 16px;
-    background: rgba(13, 19, 33, 0.03);
+    background-color: rgba(13, 19, 33, 0.03);
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .footer-content{
