--- a/style.css
+++ b/style.css
@@ -233,6 +233,60 @@ nav button{
     background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
 }
 
+/* inspiration section styles */
+.inspiration-section-container{
+    width: 1140px;
+    height: 775px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+}
+
+.inspiration-section-text{
+    width: 852px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.inspiration-section-text h1{
+    width: 852px;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 32px;
+    font-weight: 800;
+    line-height: 37px;
+}
+
+.inspiration-section-text p{
+    width: 852px;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.inspiration-section-video{
+    width: 1140px;
+    height: 614px;
+    padding: 32px;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.2);
+    border-radius: 16px;
+}
+
+.inspiration-section-video iframe{
+    height: 100%;
+    width: 100%;
+    border-radius: 16px;
+}
+
 /* footer section styles */
 
 .footer{
