--- a/style.css
+++ b/style.css
@@ -348,6 +348,61 @@ nav button{
     background: rgba(255, 223, 0, 0.05);
 }
 
+/* next target section styles */
+
+.next-target-section{
+    width: 1140px;
+    margin: 0 auto;
+    margin-bottom: 49px;
+}
+
+.libraries{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.library-content{
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 16px;
+    
+    background: rgb(255, 255, 255);    
+    padding: 40px ;
+    display: flex;
+    gap: 24px;
+    align-items: center;
+}
+
+.library-text h2{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 24px;
+    font-weight: 800;
+    line-height: 36px;    
+    margin: 8px 0px;
+}
+
+.library-text p{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-top: 8px;
+    margin-bottom: 24px;
+}
+
+.library-text a{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    letter-spacing: 0%;
+    text-decoration-line: underline;
+}
+
 /* support section styles */
 
 .support{
@@ -362,6 +417,7 @@ nav button{
     margin: 0 auto;
     margin-bottom: 80px;
     text-align: center;
+    border-radius: 16px;
 }
 
 .support h1{
